link privaty policy

--- a/yogobooks.html
+++ b/yogobooks.html
@@ -161,8 +161,8 @@ $('.responsiveGallery-wrapper').responsiveGallery({
                         <img class="img img-responsive footer-logo" src="assets/images/logo-yogome.png" alt="Logo Yogome">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-student-safe.png" alt="Logo Student Safe">
                         <p>Read our
-                            <a href="">Privacy policy</a> and
-                            <a href="">Terms of service</a>.</p>
+                            <a href="http://yogome.com/en/privacy/" target="_blank">Privacy policy</a> and
+                            <a href="http://yogome.com/en/privacy/" target="_blank">Terms of service</a>.</p>
                     </div>
                 </div>
             </footer>
