imagenes para videos

--- a/webisodes.html
+++ b/webisodes.html
@@ -134,25 +134,27 @@
                             <h2>Featured:</h2>
                             <div id="wallpaper-slider">
                                 <div class="video-item text-center">
-                                    <img class="wallpaper-thumb low-padding" src="assets/images/thumb-video.png" alt="Card image cap">
-                                    <p>Space Adventure</p>
+                                    <img class="wallpaper-thumb low-padding" src="epicweb/videoplayer/images/thumb-video1.png" alt="Card image cap">
+                                    <p>Webisode 1</p>
                                 </div>
+                                <div class="video-item text-center">
+                                    <img class="wallpaper-thumb low-padding" src="epicweb/videoplayer/images/thumb-video2.png" alt="Card image cap">
+                                    <p>Webisode 2</p>
+                                </div>
+                                <div class="video-item text-center">
+                                    <img class="wallpaper-thumb low-padding" src="epicweb/videoplayer/images/thumb-video3.png" alt="Card image cap">
+                                    <p>Webisode 3</p>
+                                </div>
+                                <div class="video-item text-center">
+                                    <img class="wallpaper-thumb low-padding" src="epicweb/videoplayer/images/thumb-video4.png" alt="Card image cap">
+                                    <p>Entrepreneur</p>
+                                </div>
+                                <!--
                                 <div class="video-item text-center">
                                     <img class="wallpaper-thumb low-padding" src="assets/images/thumb-video.png" alt="Card image cap">
                                     <p>Space Adventure</p>
                                 </div>
-                                <div class="video-item text-center">
-                                    <img class="wallpaper-thumb low-padding" src="assets/images/thumb-video.png" alt="Card image cap">
-                                    <p>Space Adventure</p>
-                                </div>
-                                <div class="video-item text-center">
-                                    <img class="wallpaper-thumb low-padding" src="assets/images/thumb-video.png" alt="Card image cap">
-                                    <p>Space Adventure</p>
-                                </div>
-                                <div class="video-item text-center">
-                                    <img class="wallpaper-thumb low-padding" src="assets/images/thumb-video.png" alt="Card image cap">
-                                    <p>Space Adventure</p>
-                                </div>
+                                -->
                             </div>
                         </div>
                             <div class="buttonsCenter hidden-xs">
