--- a/letsplay.html
+++ b/letsplay.html
@@ -59,11 +59,11 @@
                 <ul class="list-unstyled components">
                     <li class="active">
                         <ul class="list-unstyled" id="homeSubmenu">
-                          <li><a class="play-colors-orange webisodesSec" href="webisodes.html"><div id="text0">Webisodes</div></a></li>
+                          <li><a class="play-colors-orange webisodesSec" href="webisodes.html"><div class="text0">Webisodes</div></a></li>
 <!--                          <li><a class="play-colors-bluesea yogodexSec" href="yogodex.html">Yogodex</a></li>-->
-                          <li><a class="play-colors-blue html5Games" href="letsplay.html">Games</a></li>
+                            <li><a class="play-colors-blue html5Games" href="letsplay.html"><div class="text2">Games</div></a></li>
 <!--                          <li><a class="play-colors-purple resourcesSec" href="yogofun.html">Resources</a></li>-->
-                          <li><a class="play-colors-green" href="yogobooks.html"><div class="text3">Books</div></a></li>
+                          <li><a class="play-colors-green" href="yogobooks.html"><div class="text3"><div class="texto3">Books</div></div></a></li>
                           
                            
                         </ul>
@@ -73,7 +73,7 @@
                         </button>
 -->
                         <button type="button" id="register-btn-sm" class="navbar-btn hidden">
-                              <span class="texto4">Registrer</span>
+                              <span class="text4">Registrer</span>
                         </button>
                     </li>
                 </ul>
