--- a/letsplay.html
+++ b/letsplay.html
@@ -63,7 +63,7 @@
 <!--                          <li><a class="play-colors-bluesea yogodexSec" href="yogodex.html">Yogodex</a></li>-->
                             <li><a class="play-colors-blue html5Games" href="letsplay.html"><div class="text2">Games</div></a></li>
 <!--                          <li><a class="play-colors-purple resourcesSec" href="yogofun.html">Resources</a></li>-->
-                          <li><a class="play-colors-green" href="yogobooks.html"><div class="text3"><div class="texto3">Books</div></div></a></li>
+                          <li><a class="play-colors-green" href="yogobooks.html"><div class="text3"><div class="text3">Books</div></div></a></li>
                           
                            
                         </ul>
