--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
                           <li><a class="play-colors-blue html5Games" href="letsplay.html"><div class="text2">Games</div></a></li>
 <!--                          <li><a class="play-colors-purple resourcesSec" href="yogofun.html">Resources</a></li>-->
                             <li><a class="play-colors-green" href="yogobooks.html"><div class="text3">Books</div></a></li>
-                          
+                          <li class="dropdown">
+                       <a id="navbarLanguage" class="dropdown-toggle dropdown-memberships-lang text5" data-toggle="dropdown" href="#">Language <span class="caret"></span></a>
+                       <ul class="dropdown-menu">
+                           <li><a href="" id="lang-es" rel="es" class="language-switch">ESPAÑOL</a></li>
+                           <li><a href="" id="lang-en" rel="en" class="language-switch">ENGLISH</a></li>
+                           <li><a href="" id="lang-es" rel="es" class="language-switch">Portugues</a></li>
+                           <li><a href="" id="lang-en" rel="en" class="language-switch">中國</a></li>
+                           <li><a href="" id="lang-en" rel="en" class="language-switch">日本語</a></li>
+                           <li><a href="" id="lang-en" rel="en" class="language-switch">한국어</a></li>
+                       </ul>
+                   </li>
                            
                         </ul>
                         <button type="button" id="register-btn-sm" class="navbar-btn hidden">
