--- a/letsplay.html
+++ b/letsplay.html
@@ -251,7 +251,12 @@
         [
         {
         name:"All subjects",
-        es:"Todas las materias",
+        ES:"Todas las materias",
+        EN:"All Subjects",
+        PT:"All Subjects",
+        ZH:"All Subjects",
+        JA:"All Subjects",
+        KO:"All Subjects",
         img:"allsubjects"
         },
         {
