--- a/letsplay.html
+++ b/letsplay.html
@@ -168,7 +168,7 @@
                 <div id="minigamesContainer" class="container">
                     <div id="nameSubject" class="">
                         <p class="second-title text-center">
-                            All subjects
+                            <span class="text39">All subjects</span>
                         </p>
                     </div>
                             <!--Carga de minijuegos-->
