--- a/webisodes.html
+++ b/webisodes.html
@@ -110,12 +110,12 @@
                    <li class="dropdown">
                        <a id="navbarLanguage" class="dropdown-toggle dropdown-memberships-lang" data-toggle="dropdown" href="#"><span class="text5">Language</span> <span class="caret"></span></a>
                        <ul class="dropdown-menu">
-                           <li><a href="" id="lang-es" rel="es" class="language-switch">ESPAÑOL</a></li>
-                           <li><a href="" id="lang-en" rel="en" class="language-switch">ENGLISH</a></li>
-                           <li><a href="" id="lang-es" rel="es" class="language-switch">Portugues</a></li>
-                           <li><a href="" id="lang-en" rel="en" class="language-switch">中國</a></li>
-                           <li><a href="" id="lang-en" rel="en" class="language-switch">日本語</a></li>
-                           <li><a href="" id="lang-en" rel="en" class="language-switch">한국어</a></li>
+                           <li><a href="http://play.yogome.com/webisodes.html?language=ES" id="lang-es" rel="es" class="language-switch">ESPAÑOL</a></li>
+                           <li><a href="http://play.yogome.com/webisodes.html?language=EN" id="lang-en" rel="en" class="language-switch">ENGLISH</a></li>
+                           <li><a href="http://play.yogome.com/webisodes.html?language=PT" id="lang-es" rel="es" class="language-switch">Portugues</a></li>
+                           <li><a href="http://play.yogome.com/webisodes.html?language=ZH" id="lang-en" rel="en" class="language-switch">中國</a></li>
+                           <li><a href="http://play.yogome.com/webisodes.html?language=JA" id="lang-en" rel="en" class="language-switch">日本語</a></li>
+                           <li><a href="http://play.yogome.com/webisodes.html?language=KO" id="lang-en" rel="en" class="language-switch">한국어</a></li>
                        </ul>
                    </li>
 <!--
