--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <div class="shadow-ray">
                     </div>
                     <div class="title-purple">
-                        More Games
+                        <div class="text2">Games</div>
                     </div>
                   <div id="container-html5games" class="container container-webgames">
                       <!--Juegos HTML5-->
