--- a/webisodes.html
+++ b/webisodes.html
@@ -172,7 +172,7 @@
                 <div class="mid-conatiner">
                     <div class="row more-videos">
                         <div class="col-xs-12">
-                            <h2><div class="41">Featured</div>:</h2>
+                            <h2><div class="text41">Featured</div></h2>
                             <div id="wallpaper-slider">
                                 <div class="video-item text-center">
                                     <img id="button1" name="Webisode 1" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video1.png" alt="Card image cap" number="1">
