--- a/webisodes.html
+++ b/webisodes.html
@@ -34,7 +34,7 @@
 }
         
         var language = getParameterByName("language").toUpperCase();
-        console.log(language)
+        //console.log(language)
     
     </script>
 </head>
@@ -176,19 +176,19 @@
                             <div id="wallpaper-slider">
                                 <div class="video-item text-center">
                                     <img id="button1" name="Webisode 1" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video1.png" alt="Card image cap" number="1">
-                                    <p>Webisode 1</p>
+                                    <p><span class="text43">Invasion on Mathdromeda</span></p>
                                 </div>
                                 <div class="video-item text-center">
                                     <img id="button2" name="Webisode 2" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video2.png" alt="Card image cap" number="2">
-                                    <p>Webisode 2</p>
+                                    <p><span class="text43">Invasion on Mathdromeda</span> 2</p>
                                 </div>
                                 <div class="video-item text-center">
                                     <img id="button3" name="Webisode 3" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video3.png" alt="Card image cap" number="3">
-                                    <p>Webisode 3</p>
+                                    <p><span class="text43">Invasion on Mathdromeda</span> 3</p>
                                 </div>
                                 <div class="video-item text-center">
                                     <img id="button4" name="Entrepreneur" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video4.png" alt="Card image cap" number="1">
-                                    <p>Entrepreneur</p>
+                                    <p><span class="text45">How to Become an Entrepreneur</span></p>
                                 </div>
                                 <!--
                                 <div class="video-item text-center">
