--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                           </div>
                           <div class="video-title-container">
                             <p class="video-title">
-                              <span class="text38"> Yogome</span> video
+                              <span class="text38"> Yogome</span> <span class="text33">video</span>
                             </p>
                           </div>
                       </div>
