--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         if(language == null ){
             var lengua;
-            lengua = navigator.language || navigator.userLanguage; 
+            //lengua = navigator.language || navigator.userLanguage; 
             language = eval("'" + lengua + "'").toUpperCase();
         }else{
             language.toUpperCase();
