--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         if(language == null ){
             var lengua;
             //lengua = navigator.language || navigator.userLanguage; 
-            language = eval("'" + lengua + "'").toUpperCase();
+            //language = eval("'" + lengua + "'").toUpperCase();
+            language= "ES";
         }else{
             language.toUpperCase();
         }
