--- a/webisodes.html
+++ b/webisodes.html
@@ -38,8 +38,9 @@
         
         if(language == null ){
             var lengua;
-            lengua = navigator.language || navigator.userLanguage; 
-            language = eval("'" + lengua + "'").toUpperCase();
+            //lengua = navigator.language || navigator.userLanguage; 
+            //language = eval("'" + lengua + "'").toUpperCase();
+            language= "ES";
         }else{
             language.toUpperCase();
         }
