--- a/yogobooks.html
+++ b/yogobooks.html
@@ -49,8 +49,9 @@ $('.responsiveGallery-wrapper').responsiveGallery({
         
         if(language == null ){
             var lengua;
-            lengua = navigator.language || navigator.userLanguage; 
-            language = eval("'" + lengua + "'").toUpperCase();
+            //lengua = navigator.language || navigator.userLanguage; 
+            //language = eval("'" + lengua + "'").toUpperCase();
+            language= "ES";
         }else{
             language.toUpperCase();
         }
