--- a/webisodes.html
+++ b/webisodes.html
@@ -163,7 +163,7 @@
                           <div class="embed-responsive embed-responsive-16by9">
                               <!-- Youtube API: The <iframe> (and video player) will replace this <div> tag. Code in mixpanel.js-->
                               <div id="player"></div>
-                              <video id="playVideo1" controls width="560" height="315" poster="assets/images/previewvideo.jpg">
+                              <video id="playVideo1" controls width="560" height="315" poster="assets/images/previewvideo.png">
                                 <source src="epicweb/videoplayer/localvideos/1.mp4" type="video/mp4">
                               </video>
                               <script>
