--- a/letsplay.html
+++ b/letsplay.html
@@ -164,7 +164,7 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 
-                        <div class="slick-nav-buttons slick-buttons override-buttons"></div>
+                        <div onclick="flipcard.play()" class="slick-nav-buttons slick-buttons override-buttons"></div>
                                     <div id="subject-slider">
                                         <!--Carga de botones-->
                                 </div>
