--- a/letsplay.html
+++ b/letsplay.html
@@ -246,8 +246,8 @@
                         <img class="img img-responsive footer-logo" src="assets/images/logo-yogome.png" alt="Logo Yogome">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-student-safe.png" alt="Logo Student Safe">
                         <p>Read our
-                            <a href="http://yogome.com/en/privacy/" target="_blank">Privacy policy</a> and
-                            <a href="http://yogome.com/en/privacy/" target="_blank">Terms of service</a>.</p>
+                            <a href="http://yogome.com/en/privacy/" target="_blank">Privacy policy </a>and
+                            <a href="http://yogome.com/en/privacy/" target="_blank">Terms of service.</a></p>
                     </div>
                 </div>
             </footer>
