--- a/yogobooks.html
+++ b/yogobooks.html
@@ -229,9 +229,9 @@ $('.responsiveGallery-wrapper').responsiveGallery({
                     <div class="col-xs-12 play-footer">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-yogome.png" alt="Logo Yogome">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-student-safe.png" alt="Logo Student Safe">
-                        <p><span class="text47">Read our</span>
-                            <a href="http://yogome.com/en/privacy/" target="_blank"><div class="text48">Privacy policy</div></a><span class="text49">and</span>
-                            <a href="http://yogome.com/en/privacy/" target="_blank"><div class="text50">Terms of service.</div></a></p>
+                        <p>Read our
+                            <a href="http://yogome.com/en/privacy/" target="_blank">Privacy policy </a>and
+                            <a href="http://yogome.com/en/privacy/" target="_blank">Terms of service.</a></p>
                     </div>
                 </div>
             </footer>
