link de botton registro hacia yogooayments

--- a/letsplay.html
+++ b/letsplay.html
@@ -141,7 +141,7 @@
 -->
                                 <li>
                                   <button type="button" id="register-btn-lg" class="navbar-btn">
-                                    <div class="text4">Registrer</div>
+                                    <span><a href="https://yogomepayments.com/"><div class="text4">Registrer</div></a></span>
                                   </button>
                                 </li>
                             </ul>
