--- a/yogobooks.html
+++ b/yogobooks.html
@@ -110,9 +110,7 @@ $('.responsiveGallery-wrapper').responsiveGallery({
                         </button>
 -->
                         <button type="button" id="register-btn-sm" class="navbar-btn hidden">
-                            <span>
-                                <div class="text4">Registrer</div>
-                            </span>
+                            <span><a href="https://yogomepayments.com/"><div class="text4">Registrer</div></a></span>
                         </button>
                     </li>
                 </ul>
