--- a/yogofun.html
+++ b/yogofun.html
@@ -46,7 +46,7 @@
 
                         </ul>
                         <button type="button" id="register-btn-sm" class="navbar-btn hidden">
-                              <span>Registrer</span>
+                              <span><a href="https://yogomepayments.com/"><div class="text4">Registrer</div></a></span>
                         </button>
                     </li>
                 </ul>
