--- a/webisodes.html
+++ b/webisodes.html
@@ -84,7 +84,7 @@
                         </button>
 -->
                         <button type="button" id="register-btn-sm" class="navbar-btn hidden">
-                              <span class="text4">Registrer</span>
+                              <span><a href="https://yogomepayments.com/"><div class="text4">Registrer</div></a></span>
                         </button>
                     </li>
                 </ul>
