--- a/webisodes.html
+++ b/webisodes.html
@@ -141,7 +141,7 @@
 -->
                                 <li>
                                   <button type="button" id="register-btn-lg" class="navbar-btn">
-                                    <span class="text4">Registrer</span>
+                                      <a href="https://yogomepayments.com/"><span class="text4">Registrer</span></a>
                                   </button>
                                 </li>
                             </ul>
@@ -191,20 +191,16 @@
                             <h2><div class="text41">Featured</div></h2>
                             <div id="wallpaper-slider">
                                 <div id="button1" class="video-item text-center">
-                                    <img  name="Websidoes 3" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video1.png" alt="Card image cap" number="1">
+                                    <img  name="Websidoes 3" class="wallpaper-thumb low-padding videoButton" src="assets/videos/thumb-video1.png" alt="Card image cap" number="1">
                                     <p><span class="text43">Invasion on Mathdromeda</span></p>
                                 </div>
                                 <div id="button2" class="video-item text-center">
-                                    <img name="text43" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video2.png" alt="Card image cap" number="2">
-                                    <p><span class="text43">Invasion on Mathdromeda</span> 2</p>
+                                    <img  name="text45" class="wallpaper-thumb low-padding videoButton" src="assets/videos/thumb-video2.png" alt="Card image cap" number="1">
+                                    <p><span class="text45">How to Become an Entrepreneur</span></p>
                                 </div>
                                 <div id="button3" class="video-item text-center">
-                                    <img name="text43" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video3.png" alt="Card image cap" number="3">
-                                    <p><span class="text43">Invasion on Mathdromeda</span> 3</p>
-                                </div>
-                                <div id="button4" class="video-item text-center">
-                                    <img  name="text45" class="wallpaper-thumb low-padding videoButton" src="epicweb/videoplayer/images/thumb-video4.png" alt="Card image cap" number="1">
-                                    <p><span class="text45">How to Become an Entrepreneur</span></p>
+                                    <img  name="text51" class="wallpaper-thumb low-padding videoButton" src="assets/videos/thumb-video3.png" alt="Card image cap" number="1">
+                                    <p><span class="text51">Why Girls Should be Engineers</span></p>
                                 </div>
                                 <!--
                                 <div class="video-item text-center">
@@ -270,9 +266,9 @@
                         
                        $("#button" + i).click(function(){
                            pop.play();
-                        $("#playVideo1").attr("src", "epicweb/videoplayer/localvideos/" +  $(this).attr("number") + ".mp4"  )
+                        $("#playVideo1").attr("src", "assets/videos/" +  $(this).attr("number") + language + ".mp4"  )
                            
-                        $('#playVideo1').attr('poster', "epicweb/videoplayer/images/poster" +  $(this).attr("number") + ".png" );
+                        $('#playVideo1').attr('poster', "assets/videos/poster" +  $(this).attr("number") + ".png" );
                            var textNew = $(this).find("span").text();
                            $(".video-title").html( textNew );
                     }); 
