--- a/letsplay.html
+++ b/letsplay.html
@@ -382,12 +382,12 @@
     
 function showGames(){
         var pathGames = "games/nonrefactored/"
-  		var games = yogomeGames.getGames();
+  		var games = yogomeGames.getGames("absolute");
   		for(var i = 0 ; i<= games.length-1 ;i++){
 
   			var num = i;
   			if(games[i].review){
-  				$("#minigamesContainer").append("<div class='col-xs-6 col-sm-4 "+games[i].subject+"'><a href='"+games[i].url+"' rev='"+games[i].name+"' class='gameCatalog' id='gameimg" + num+"' ><img class='growMouse img-responsive img-minigames' onmouseover='flipcard.play()' src='" +games[num].url +"/images/fbpost.png" + "'/></a> </div>");
+  				$("#minigamesContainer").append("<div class='col-xs-6 col-sm-4 "+games[i].subject+"'><a href='"+games[i].mapUrl+"' rev='"+games[i].name+"' class='gameCatalog' id='gameimg" + num+"' ><img class='growMouse img-responsive img-minigames' onmouseover='flipcard.play()' src='" +games[num].url +"images/fbpost.png" + "'/></a> </div>");
   				$("#gameimg" + num).attr("value",i);
   			}
 
