--- a/passRecover.html
+++ b/passRecover.html
@@ -53,7 +53,7 @@
 <div id="recover" class="modal">
 
 	<!-- Modal content -->
-	<div class="modal-content container" >
+	<div class="modal-content container container-login" >
 		<div class="navigation">
 			<button class="closeModal close" onclick="pop.play()"></button>
 		</div>
