--- a/players.html
+++ b/players.html
@@ -38,7 +38,7 @@
 <div id="players" class="modal">
 
 	<!-- Modal content -->
-	<div class="modal-content container" >
+	<div class="modal-content container container-login" >
 		<div class="navigation">
 			<button class="closeModal close"></button>
 		</div>
