--- a/login.html
+++ b/login.html
@@ -80,7 +80,7 @@
 <div id="signIn" class="modal">
 
 	<!-- Modal content -->
-	<div class="modal-content container" >
+	<div class="modal-content container container-login" >
 		<div class="navigation">
 			<button class="closeModal close" onclick="pop.play()"></button>
 		</div>
