--- a/save.html
+++ b/save.html
@@ -53,7 +53,7 @@
 	<div id="save" class="modal">
 
 		<!-- Modal content -->
-		<div class="modal-content container" >
+		<div class="modal-content container container-login" >
 			<div class="navigation">
 				<button class="closeModal close" onclick="pop.play()"></button>
 			</div>
