--- a/webisodes.html
+++ b/webisodes.html
@@ -55,14 +55,14 @@
                             <li><a class="play-colors-green"><div class="text3 menu3">Books</div></a></li>
                           <li class="dropdown">
                        <a id="navbarLanguage" class="dropdown-toggle dropdown-memberships-lang text5" data-toggle="dropdown" href="#">Language <span class="caret"></span></a>
-                       <ul class="dropdown-menu">
-                           <li><a href="index.html?language=ES" id="lang-es" rel="es" class="language-switch">ESPAÑOL</a></li>
-                           <li>ENGLISH</li>
-                           <li><a href="http://play.yogome.com/index.html?language=PT" id="lang-es" rel="pt" class="language-switch">Portugues</a></li>
-                           <li><a href="http://play.yogome.com/index.html?language=ZH" id="lang-en" rel="zh" class="language-switch">中國</a></li>
-                           <li><a href="http://play.yogome.com/index.html?language=JA" id="lang-en" rel="ja" class="language-switch">日本語</a></li>
-                           <li><a href="http://play.yogome.com/index.html?language=KO" id="lang-en" rel="en" class="language-switch">한국어</a></li>
-                       </ul>
+                      <ul class="dropdown-menu">
+                                           <li class="botonLang0"><a class="language-switch">ESPAÑOL</a></li>
+                                           <li class="botonLang1"><a class="language-switch">ENGLISH</a></li>
+                                           <li class="botonLang2"><a class="language-switch">Portugues</a></li>
+                                           <li class="botonLang3"><a class="language-switch">中國</a></li>
+                                           <li class="botonLang4"><a class="language-switch">日本語</a></li>
+                                           <li class="botonLang5"><a class="language-switch">한국어</a></li>
+                        </ul>
                    </li>
                         <li class="accesButtons">
                     <button type="button" id="devicelogInButton" class="navbar-btn ">
@@ -113,13 +113,13 @@
                                     <li><a class="play-colors-green"><div class="text3 menu3">Books</div></a></li>
                                     <li class="dropdown">
                                        <a id="navbarLanguage" class="dropdown-toggle dropdown-memberships-lang" data-toggle="dropdown" href="#"><span class="text5">Language</span> <span class="caret"></span></a>
-                                       <ul id="dropMenudesk" class="dropdown-menu">
-                                           <li><a class="language-switch">ESPAÑOL</a></li>
-                                           <li><a class="language-switch">ENGLISH</a></li>
-                                           <li><a class="language-switch">Portugues</a></li>
-                                           <li><a class="language-switch">中國</a></li>
-                                           <li><a class="language-switch">日本語</a></li>
-                                           <li><a class="language-switch">한국어</a></li>
+                                       <ul class="dropdown-menu">
+                                           <li class="botonLang0"><a class="language-switch">ESPAÑOL</a></li>
+                                           <li class="botonLang1"><a class="language-switch">ENGLISH</a></li>
+                                           <li class="botonLang2"><a class="language-switch">Portugues</a></li>
+                                           <li class="botonLang3"><a class="language-switch">中國</a></li>
+                                           <li class="botonLang4"><a class="language-switch">日本語</a></li>
+                                           <li class="botonLang5"><a class="language-switch">한국어</a></li>
                                        </ul>
                                     </li>
                                     <li class="accesButtons">   
