epic.js deleted

--- a/letsplay.html
+++ b/letsplay.html
@@ -23,7 +23,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <script src="http://yogome.com/epic/shared/minigames/js/helpers/yogomeGames.js" type="text/javascript"></script>
+    <script src="/epicweb/shared/minigames/js/helpers/yogomeGames.js" type="text/javascript"></script>
     <script src="js/epic/data/epicYogomeGames.js" type="text/javascript"></script>
     <!--Detect language-->
     <script src="assets/js/detectlanguage.js"></script>    
@@ -196,7 +196,6 @@
     </div>
     <div id="myModal"></div>
 <!--MODAL    -->
-    <script src="js/epic.js"></script>
     <script src="js/languages.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/epic/data/epicCharacters.js"></script> 
