include google analitycs

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <script src="js/epic/data/epicYogomeGames.js" type="text/javascript"></script>
         <!--Detect language-->
     <script src="assets/js/detectlanguage.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-64907347-1"></script>
+<script>
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+
+ gtag('config', 'UA-64907347-1');
+</script>    
+    
 </head>
 <body>
     
