--- a/letsplay.html
+++ b/letsplay.html
@@ -26,7 +26,15 @@
     <!--Detect language-->
     <script src="assets/js/detectlanguage.js"></script>    
 </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-64907347-1"></script>
+<script>
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
 
+ gtag('config', 'UA-64907347-1');
+</script>
     
 <body>
     
