--- a/yogobooks.html
+++ b/yogobooks.html
@@ -36,7 +36,15 @@ $('.responsiveGallery-wrapper').responsiveGallery({
 		
 	</script>
    
-    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-64907347-1"></script>
+<script>
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+
+ gtag('config', 'UA-64907347-1');
+</script>    
 		  
 </head>
 
