cambio de sonido. magic -> pop

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                           </div>
                           <div class="separator1"></div>
                           <div class="separator1"></div>
-                          <div id="btn-play" onmouseover="magic.play()" class="btn-play text-center mixpanel-call"></div>
+                          <div id="btn-play" onmouseover="pop.play()" class="btn-play text-center mixpanel-call"></div>
                           <div class="separator1"></div>
                       </div>
                         
