--- a/letsplay.html
+++ b/letsplay.html
@@ -86,7 +86,7 @@
                          <li id="menuUserMovil">
                                            
                             <div class="loginAccessMovil">
-                                <span id="id_user">ID_USER</span>
+                                <span id="id_userMovil">ID_USER</span>
                             </div> 
                             <button id="buttonLogOutMovil" class="logoutMovil">
                                 <img src="assets/images/logouticon.png" />
