videos and banner images fix and update

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         
 
     $("#btn-play").click(function(){
-		window.location.href = "http://play.yogome.com/epicweb/minigames/epicSite/?language=" + language;
+		window.location.href = "epicweb/minigames/epicSite/?language=" + language;
     });
         
     </script>
